feat: handle duplicate and validation exception