@@ -1,16 +1,16 @@
 package com.techeer.f5.jmtmonster.global.error;
 
 import com.techeer.f5.jmtmonster.global.error.exception.ErrorCode;
+import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.Set;
+import javax.validation.ConstraintViolation;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.Setter;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.FieldError;
-
-import java.time.LocalDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.stream.Collectors;
 
 @Setter
 @Getter
@@ -27,7 +27,20 @@ public class ErrorResponse {
     private ErrorResponse(ErrorCode errorCode, String message, List<FieldError> errors) {
         setErrorCode(errorCode);
         setMessage(message);
-        this.errors = errors.stream().map(CustomFieldError::new).collect(Collectors.toList());
+        this.errors = errors
+                .stream()
+                .map(CustomFieldError::new)
+                .toList();
+    }
+
+    private ErrorResponse(ErrorCode errorCode, String message,
+            Set<ConstraintViolation<?>> constraintViolations) {
+        setErrorCode(errorCode);
+        setMessage(message);
+        this.errors = constraintViolations
+                .stream()
+                .map(CustomFieldError::new)
+                .toList();
     }
 
     private ErrorResponse(ErrorCode errorCode, String message, String exceptionMessage) {
@@ -40,8 +53,18 @@ public class ErrorResponse {
         return new ErrorResponse(errorCode, message, Collections.emptyList());
     }
 
-    public static ErrorResponse of(ErrorCode errorCode, String message, BindingResult bindingResult) {
+    public static ErrorResponse of(ErrorCode errorCode, String message,
+            BindingResult bindingResult) {
         return new ErrorResponse(errorCode, message, bindingResult.getFieldErrors());
+    }
+
+    public static ErrorResponse of(ErrorCode errorCode, String message, List<FieldError> errors) {
+        return new ErrorResponse(errorCode, message, errors);
+    }
+
+    public static ErrorResponse of(ErrorCode errorCode, String message,
+            Set<ConstraintViolation<?>> constraintViolations) {
+        return new ErrorResponse(errorCode, message, constraintViolations);
     }
 
     public static ErrorResponse of(ErrorCode errorCode, String message, String exceptionMessage) {
@@ -69,6 +92,17 @@ public class ErrorResponse {
                 this.value = "";
             }
             this.reason = fieldError.getDefaultMessage();
+        }
+
+        private CustomFieldError(ConstraintViolation<?> constraintViolation) {
+            this.field = constraintViolation.getPropertyPath().toString();
+
+            if (constraintViolation.getInvalidValue() != null) {
+                this.value = constraintViolation.getInvalidValue().toString();
+            } else {
+                this.value = "";
+            }
+            this.reason = constraintViolation.getMessage();
         }
     }
 }
